--- a/apis.html
+++ b/apis.html
@@ -1,4 +1,4 @@
-<html><head><meta name="color-scheme" content="light dark"></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">{
+<pre style="word-wrap: break-word; white-space: pre-wrap;">{
   "kind": "youtube#channelListResponse",
   "etag": "zEuWSRghNm5irRfT8quXRb7NuMk",
   "pageInfo": {
